--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -4,7 +4,7 @@
   items:
     - name: 关于应用程序网关
       href: overview.md
-    - name: 新增功能？
+    - name: 新增功能
       href: whats-new.md
 - name: 快速入门
   expanded: true
@@ -40,6 +40,8 @@
       href: resource-manager-template-samples.md
 - name: 概念
   items:
+    - name: 远程工作支持
+      href: ../networking/working-remotely-support.md?toc=%2fazure%2fapplication-gateway%2ftoc.json
     - name: 基础
       items:
         - name: 应用程序网关功能
@@ -90,7 +92,7 @@
       href: application-gateway-websocket.md
     - name: 常见问题解答
       href: application-gateway-faq.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 托管单一站点
       items:
@@ -214,7 +216,7 @@
           href: application-gateway-create-probe-classic-ps.md
         - name: 资源管理器 PowerShell
           href: application-gateway-create-probe-ps.md
-    - name: 故障排除
+    - name: 疑难解答
       items:
         - name: 将 ILB 与应用服务环境配合使用
           href: create-gateway-internal-load-balancer-app-service-environment.md
