--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -204,6 +204,8 @@
           items:
             - name: Azure 门户
               href: howto-configure-audit-logs-portal.md
+            - name: Azure CLI
+              href: howto-configure-audit-logs-cli.md
     - name: 监视
       items:
         - name: 针对指标创建警报
