--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -37,7 +37,7 @@
       href: azure-netapp-files-solution-architectures.md
     - name: 有关 Azure NetApp 文件的常见问题解答
       href: azure-netapp-files-faqs.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 注册 Azure NetApp 文件
       href: azure-netapp-files-register.md
@@ -65,8 +65,6 @@
       href: azure-netapp-files-resize-capacity-pools-or-volumes.md
     - name: 开发
       items:
-        - name: REST
-          href: azure-netapp-files-develop-with-rest-api.md
         - name: Azure NetApp 文件 SDK 和 CLI 工具
           href: azure-netapp-files-sdk-cli.md
         - name: 排查 Azure NetApp 文件资源提供程序错误
