--- a/articles/azure-arc/toc.yml
+++ b/articles/azure-arc/toc.yml
@@ -1,22 +1,20 @@
 - name: Azure Arc 文档
   href: index.yml
 - name: 概述
-  expanded: true
   items:
     - name: 什么是用于服务器的 Azure Arc？
       href: ./servers/overview.md
-- name: 连接到 Azure Arc
-  expanded: true
+- name: 操作指南
   items:
-    - name: 从 Azure 门户将计算机连接到 Azure Arc
-      href: ./servers/onboard-portal.md
-    - name: 使用服务主体大规模连接计算机
-      href: ./servers/onboard-service-principal.md
-    - name: 通过 PowerShell DSC 将计算机连接到 Azure Arc
-      href: ./servers/onboard-dsc.md
-- name: 管理代理
-  href: ./servers/manage-agent.md
-- name: 参考
-  items:
-    - name: Azure 连接的计算机代理 CLI 接口
-      href: ./servers/azcmagent-reference.md
+    - name: 连接到 Azure Arc
+      items:
+        - name: 从 Azure 门户将计算机连接到 Azure Arc
+          href: ./servers/onboard-portal.md
+        - name: 使用服务主体大规模连接计算机
+          href: ./servers/onboard-service-principal.md
+        - name: 通过 PowerShell DSC 将计算机连接到 Azure Arc
+          href: ./servers/onboard-dsc.md
+    - name: 管理
+      items:
+        - name: 管理代理
+          href: ./servers/manage-agent.md
