--- a/articles/cognitive-services/Speech-Service/index-hosting.yml
+++ b/articles/cognitive-services/Speech-Service/index-hosting.yml
@@ -1,22 +1,22 @@
 ### YamlMime:Landing
-title: 托管文档
+title: “承载”文档
 summary: 语音服务容器可用于语音到文本和文本到语音转换方案，包括标准模型或自定义模型。
 metadata:
   title: 托管文档 - 教程，API 参考 - Azure 认知服务 |微软文档
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
-  author: IEvangelist
+  author: trevorbye
   manager: nitinme
   ms.service: speech-service
   ms.topic: landing-page
   ms.date: 03/23/2020
-  ms.author: dapine
-  ms.openlocfilehash: c342b797dfe21fe4ffbd1bb9bc112e9726cdec42
-  ms.sourcegitcommit: c5661c5cab5f6f13b19ce5203ac2159883b30c0e
+  ms.author: trbye
+  ms.openlocfilehash: 640c1b8e9c51059bc4c296ef93a4e6dd54ea7a42
+  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/01/2020
-  ms.locfileid: "80529473"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81401514"
 landingContent:
 - title: 关于托管
   linkLists:
@@ -24,9 +24,9 @@ landingContent:
     links:
     - text: 安装和运行语音容器
       url: speech-container-howto.md
-    - text: 与库伯奈斯和赫尔姆的语音容器
+    - text: 使用 Kubernetes 和 Helm 的语音容器
       url: speech-container-howto-on-premises.md
-    - text: Azure 容器实例上的语音容器
+    - text: Azure 容器实例中的语音容器
       url: deploy-speech-on-container-instances.md
 - title: 创建和配置
   linkLists:
