--- a/articles/cognitive-services/Speech-Service/index-text-to-speech.yml
+++ b/articles/cognitive-services/Speech-Service/index-text-to-speech.yml
@@ -5,18 +5,18 @@ metadata:
   title: 文本到语音文档 - 教程，API 参考 - Azure 认知服务 |微软文档
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
-  author: IEvangelist
+  author: trevorbye
   manager: nitinme
   ms.service: speech-service
   ms.topic: landing-page
   ms.date: 03/10/2020
-  ms.author: dapine
-  ms.openlocfilehash: e9fb4f1b26dd8c5a958f8321f8c6fd0def605c93
-  ms.sourcegitcommit: a53fe6e9e4a4c153e9ac1a93e9335f8cf762c604
+  ms.author: trbye
+  ms.openlocfilehash: 83bf5f9e623d1d777834e5efdd26fa4cdbc42819
+  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/09/2020
-  ms.locfileid: "80991341"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81401456"
 landingContent:
 - title: 关于文本到语音
   linkLists:
