--- a/articles/cognitive-services/Speech-Service/index-voice-assistants.yml
+++ b/articles/cognitive-services/Speech-Service/index-voice-assistants.yml
@@ -1,24 +1,24 @@
 ### YamlMime:Landing
-title: 语音助理文档
+title: 语音助手文档
 summary: 使用语音服务的语音助理使开发人员能够为其应用程序和体验创建自然、类似人类的对话界面。
 metadata:
   title: 语音助理文档 - 教程，API 参考 - Azure 认知服务 |微软文档
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
-  author: IEvangelist
+  author: trevorbye
   manager: nitinme
   ms.service: speech-service
   ms.topic: landing-page
   ms.date: 03/10/2020
-  ms.author: dapine
-  ms.openlocfilehash: 6ae919317269753cbc3c8bf5b0df11e19a47989f
-  ms.sourcegitcommit: 2ec4b3d0bad7dc0071400c2a2264399e4fe34897
+  ms.author: trbye
+  ms.openlocfilehash: cbef289ebc79e20b928db684af01a4eaeb1c0ce8
+  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/28/2020
-  ms.locfileid: "79415149"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81401435"
 landingContent:
-- title: 关于语音助手
+- title: 关于语音助理
   linkLists:
   - linkListType: overview
     links:
@@ -40,11 +40,11 @@ landingContent:
     links:
     - text: 创建自定义命令应用
       url: quickstart-custom-speech-commands-create-new.md
-    - text: 使用参数创建自定义命令
+    - text: 创建带参数的自定义命令
       url: quickstart-custom-speech-commands-create-parameters.md
-    - text: 将自定义命令与自定义语音一起使用
+    - text: 通过自定义语音使用自定义命令
       url: quickstart-custom-speech-commands-select-custom-voice.md
-    - text: 将自定义命令与语音 SDK 一起使用
+    - text: 通过语音 SDK 使用自定义命令
       url: quickstart-custom-speech-commands-speech-sdk.md
   - linkListType: how-to-guide
     links:
@@ -54,7 +54,7 @@ landingContent:
       url: how-to-custom-speech-commands-validations.md
     - text: 添加确认
       url: how-to-custom-speech-commands-confirmations.md
-    - text: 添加一步校正
+    - text: 添加单步更正
       url: how-to-custom-speech-commands-one-step-correction.md
 - title: 使用直线语音进行开发
   linkLists:
