--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: spelluru
   ms.author: spelluru
   ms.date: 09/06/2019
-  ms.openlocfilehash: bd834bdebad486f1f5975bbbc93809a06a69ebf8
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: 095d94b09ad7cfd6e47e7322401db0bbf6ff8a03
+  ms.sourcegitcommit: d6e4eebf663df8adf8efe07deabdc3586616d1e4
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "74666182"
+  ms.lasthandoff: 04/15/2020
+  ms.locfileid: "81393207"
 landingContent:
 - title: 关于事件网格
   linkLists:
@@ -30,7 +30,7 @@ landingContent:
     - text: 事件网格概念
       url: concepts.md
     - text: 事件源
-      url: event-sources.md
+      url: overview.md#event-sources
     - text: 事件处理程序
       url: event-handlers.md
     - text: 事件筛选器
