--- a/articles/azure-resource-manager/managed-applications/toc.yml
+++ b/articles/azure-resource-manager/managed-applications/toc.yml
@@ -8,13 +8,11 @@
   expanded: true
   items:
     - name: 发布应用程序定义
-      href: publish-managed-app-definition-quickstart.md
+      href: publish-service-catalog-app.md
     - name: 部署服务目录应用
       href: deploy-service-catalog-quickstart.md
 - name: 教程
   items:
-    - name: 创建定义文件
-      href: publish-service-catalog-app.md
     - name: 发布市场应用程序
       href: publish-marketplace-app.md
     - name: 创建包含自定义提供程序的托管应用程序
@@ -35,9 +33,9 @@
       href: concepts-built-in-policy.md
     - name: 角色定义项目
       href: concepts-custom-role-definition.md
-- name: 操作方法指南
+- name: 操作指南
   items:
-    - name: 发布者
+    - name: 发布服务器
       items:
         - name: 创建门户界面
           href: create-uidefinition-overview.md
