--- a/articles/cognitive-services/Speech-Service/index-intent-recognition.yml
+++ b/articles/cognitive-services/Speech-Service/index-intent-recognition.yml
@@ -5,18 +5,18 @@ metadata:
   title: 意向识别文档 - 教程，API 参考 - Azure 认知服务 |微软文档
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
-  author: IEvangelist
+  author: trevorbye
   manager: nitinme
   ms.service: speech-service
   ms.topic: landing-page
   ms.date: 03/10/2020
-  ms.author: dapine
-  ms.openlocfilehash: 87e698c2a9b09b54c6015293b5be26ea2006a786
-  ms.sourcegitcommit: 2ec4b3d0bad7dc0071400c2a2264399e4fe34897
+  ms.author: trbye
+  ms.openlocfilehash: 65b3f2322c4683eedef8cdfbc328664d4597df58
+  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/28/2020
-  ms.locfileid: "79415166"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81401488"
 landingContent:
 - title: 关于意向识别
   linkLists:
@@ -28,7 +28,7 @@ landingContent:
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 使用 LUIS 和 C 识别语音意图#
+    - text: 使用 LUIS 和 C# 识别语音意向
       url: how-to-recognize-intents-from-speech-csharp.md
 - title: 参考
   linkLists:
