--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -18,8 +18,6 @@
       href: spring-cloud-quickstart-launch-app-maven.md
 - name: 教程
   items:
-    - name: 准备 Java Spring 应用以进行部署
-      href: spring-cloud-tutorial-prepare-app-deployment.md
     - name: 设置配置服务器
       href: spring-cloud-tutorial-config-server.md
     - name: 手动缩放应用程序
@@ -42,8 +40,10 @@
       href: spring-cloud-concept-metrics.md
     - name: 规划灾难恢复
       href: disaster-recovery.md
-- name: 操作方法指南
+- name: 操作指南
   items:
+    - name: 准备 Java Spring 应用以进行部署
+      href: spring-cloud-tutorial-prepare-app-deployment.md
     - name: 如何启动、停止和删除 Azure Spring Cloud 应用程序
       href: spring-cloud-howto-start-stop-delete.md
     - name: 如何设置过渡环境
