--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -105,6 +105,9 @@
     - name: 应用程序网关
       tocHref: /azure/application-gateway/
       topicHref: /azure/application-gateway/
+    - name: Synapse Analytics
+      tocHref: /azure/synapse-analytics/
+      topicHref: /azure/synapse-analytics/
     - name: ASC for IoT
       tocHref: /azure/asc-for-iot/
       topicHref: /azure/asc-for-iot/
@@ -525,7 +528,20 @@
       topicHref: /azure/jenkins/
     - name: Key Vault
       tocHref: /azure/key-vault/
-      topicHref: /azure/key-vault/
+      topicHref: /azure/key-vault
+      items:
+        - name: 常规
+          tocHref: /azure/key-vault/general/
+          topicHref: /azure/key-vault/general/
+        - name: 证书
+          tocHref: /azure/key-vault/certificates/
+          topicHref: /azure/key-vault/certificates/
+        - name: 键
+          tocHref: /azure/key-vault/keys/
+          topicHref: /azure/key-vault/keys/
+        - name: 机密
+          tocHref: /azure/key-vault/secrets/
+          topicHref: /azure/key-vault/secrets/
     - name: Azure Kinect DK
       tocHref: /azure/kinect-dk/
       topicHref: /azure/kinect-dk/
