--- a/articles/cognitive-services/Translator/index.yml
+++ b/articles/cognitive-services/Translator/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 10/14/2019
   ms.author: erhopf
-  ms.openlocfilehash: 2d6b5f07cdefe874a8c25338e5c31664fccb8055
-  ms.sourcegitcommit: 0947111b263015136bca0e6ec5a8c570b3f700ff
+  ms.openlocfilehash: 47944b573cdc2a8121c525c7750aa868d4a4e696
+  ms.sourcegitcommit: 31ef5e4d21aa889756fa72b857ca173db727f2c3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/24/2020
-  ms.locfileid: "79415725"
+  ms.lasthandoff: 04/16/2020
+  ms.locfileid: "81529785"
 landingContent:
 - title: 转换器
   linkLists:
@@ -64,7 +64,7 @@ landingContent:
       url: reference/v3-0-reference.md
     - text: 请求限制
       url: request-limits.md
-    - text: 语言和区域支持
+    - text: 语言支持
       url: language-support.md
 - title: 自定义翻译
   linkLists:
