--- a/articles/cognitive-services/immersive-reader/toc.yml
+++ b/articles/cognitive-services/immersive-reader/toc.yml
@@ -42,6 +42,6 @@
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
     - name: 语言支持
-      href: 'https://aka.ms/ltlangsupport'
+      href: language-support.md
     - name: 区域可用性
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services'
