--- a/articles/cognitive-services/Bing-Web-Search/toc.yml
+++ b/articles/cognitive-services/Bing-Web-Search/toc.yml
@@ -39,7 +39,7 @@
       href: 'https://github.com/Azure-Samples/cognitive-services-REST-api-samples'
     - name: SDK 示例
       href: sdk-samples.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 筛选答案
       href: filter-answers.md
@@ -95,7 +95,7 @@
       href: 'https://azure.microsoft.com/pricing/details/cognitive-services/search-api/web/'
     - name: 区域可用性
       href: 'https://azure.microsoft.com/global-infrastructure/services/'
-    - name: 语言和区域支持
+    - name: 语言支持
       href: language-support.md
     - name: 适用于必应 Web 搜索 API 的分析
       href: bing-web-stats.md
