--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -48,11 +48,11 @@
   items:
     - name: 命名实体类型
       href: named-entity-types.md
-    - name: 语言和区域支持
+    - name: 语言支持
       href: language-support.md
     - name: 文本偏移量
       href: concepts/text-offsets.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 调用文本分析 API
       href: How-tos/text-analytics-how-to-call-api.md
